--- a/assets/src/scss/component/listings/_listing-card.scss
+++ b/assets/src/scss/component/listings/_listing-card.scss
@@ -880,7 +880,7 @@
         }
         &.directorist-badge-open,
         &.directorist-badge-close {
-          display: inline-block;
+          display: inline-flex;
           height: 21px;
           line-height: 21px;
           width: auto;
